# wave-equation-pde

src/opengl-cpp/: CMakeLists.txt
src/opengl-cpp/include/: wave_simulator.hpp
src/opengl-cpp/src/: main.cpp  wave_simulator.cpp
